--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="assets/css/style.css">
+  <script src="assets/js/app.js" defer></script>
   
   <title>Frontend Mentor | Advice generator app</title>
 
